--- a/memes/impression.html
+++ b/memes/impression.html
@@ -10,9 +10,9 @@
     <title>印象</title>
   </head>
 
-  <body class="p-3 text-white">
+  <body class="p-3 text-white flex items-center justify-center">
     <div
-      class="wrapper pb-4 bg-black size-full flex flex-col gap-4 justify-center items-center"
+      class="wrapper pb-4 bg-black w-fit flex flex-col gap-4 justify-center items-center"
     >
       <div
         class="text-white relative leading-loose flex justify-center items-center text-4xl bg-transparent text-center"
