fix fled direction

--- a/memes/impression.html
+++ b/memes/impression.html
@@ -10,7 +10,7 @@
     <title>印象</title>
   </head>
 
-  <body class="p-3 text-white flex items-center justify-center">
+  <body class="p-3 text-white flex flex-col items-center justify-center">
     <div
       class="wrapper pb-4 bg-black w-fit flex flex-col gap-4 justify-center items-center"
     >
