fix(memes/bingo): hide scroll bar

--- a/memes/bingo.html
+++ b/memes/bingo.html
@@ -24,7 +24,7 @@
             v-model="data['desc']"
             placeholder="五个连成一线，说明你XXXXXXXXXX，XXXXXX真是辛苦了！"
             rows="1"
-            class="w-full text-xl font-semibold leading-loose text-center desc"
+            class="w-full overflow-hidden text-xl font-semibold leading-loose text-center text-pretty desc"
           ></textarea>
           <button>
             上面的可以按右下角的小三角调整高度
