fix(memes/bingo): update text

--- a/memes/bingo.html
+++ b/memes/bingo.html
@@ -73,7 +73,7 @@
           class="p-3 m-auto text-black bg-gray-300 rounded-md"
           @click="share()"
         >
-          分享给别人
+          复制到剪贴板
         </button>
         <button
           class="p-3 m-auto text-black bg-gray-300 rounded-md"
